--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -36,7 +36,6 @@ top: true</p>
 <p>MySQL isolation levels and how they work: <a href="https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work">https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work</a></p>
 <p>A Beginner’s Guide to the True Order of SQL Operations: <a href="https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations">https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations</a></p>
 <p>Falsehoods programmers believe in: <a href="https://github.com/kdeldycke/awesome-falsehood">https://github.com/kdeldycke/awesome-falsehood</a></p>
-<p>ASTs for Beginners by Kent C. Dodds: <a href="https://www.youtube.com/watch?v=CFQBHy8RCpg">https://www.youtube.com/watch?v=CFQBHy8RCpg</a></p>
 <hr/>
 <h2>Tools and Cool websites</h2>
 <p>Chrome urls: <a href="chrome://chrome-urls/">chrome://chrome-urls</a></p>
@@ -64,7 +63,6 @@ top: true</p>
 <p>Build your own X: <a href="https://github.com/danistefanovic/build-your-own-x">https://github.com/danistefanovic/build-your-own-x</a></p>
 <p>You Don't Need: <a href="https://github.com/you-dont-need/You-Dont-Need">https://github.com/you-dont-need/You-Dont-Need</a></p>
 <p>All the Ways to Make a Web Component: <a href="https://webcomponents.dev/blog/all-the-ways-to-make-a-web-component/">https://webcomponents.dev/blog/all-the-ways-to-make-a-web-component/</a></p>
-<p>Create README for your open source project: <a href="https://readme.so/">https://readme.so/</a></p>
 <p>The Timeline of The Web: <a href="https://thehistoryoftheweb.com/timeline/">https://thehistoryoftheweb.com/timeline/</a></p>
 <p>Visual history of your favorite technology: <a href="https://www.versionmuseum.com/">https://www.versionmuseum.com/</a></p>
 <p>Floating Point Math: <a href="https://0.30000000000000004.com/">https://0.30000000000000004.com/</a>  (`<a href="https://${0.1">https://${0.1</a> + 0.2}.com`)</p>
@@ -90,11 +88,11 @@ top: true</p>
 <p>A powerful media downloader with no bullshit: <a href="https://cobalt.tools">https://cobalt.tools</a></p>
 <p>A high-performance HTTP benchmarking tool written in Golang: <a href="https://github.com/six-ddc/plow">https://github.com/six-ddc/plow</a></p>
 <p>Netlify Celebrates 5 Million Developers | 3D Game: <a href="https://5-million-devs.netlify.com">https://5-million-devs.netlify.com</a></p>
-<p>VoidZero - Unified Toolchain for JavaScript: <a href="https://github.com/voidzero-dev">https://github.com/voidzero-dev</a></p>
 <p>Utilities to work with PDFs in Node.js, browser and workers: <a href="https://github.com/unjs/unpdf">https://github.com/unjs/unpdf</a></p>
 <p>The web-platform-tests Interop project: <a href="https://github.com/web-platform-tests/interop">https://github.com/web-platform-tests/interop</a></p>
 <p>Code transformer based on AST but providing a more intuitive API: <a href="https://github.com/thx/gogocode">https://github.com/thx/gogocode</a></p>
 <p>Guidance on choosing a license for your open source project: <a href="https://choosealicense.com">https://choosealicense.com</a></p>
+<p>Bare metal to production ready in minutes: <a href="https://github.com/MightyMoud/sidekick">https://github.com/MightyMoud/sidekick</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -285,9 +283,10 @@ top: true</p>
 <p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <p>Internal Knowledge Base Preview: <a href="https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base">https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base</a></p>
 <p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
+<p>Chatbot components based on shadcn/ui: <a href="https://github.com/Blazity/shadcn-chatbot-kit">https://github.com/Blazity/shadcn-chatbot-kit</a></p>
 <p>Introducing the Realtime API: <a href="https://openai.com/index/introducing-the-realtime-api">https://openai.com/index/introducing-the-realtime-api</a></p>
 <p>Audio input and output for the OpenAI Chat Completion API: <a href="https://simonwillison.net/2024/Oct/18/openai-audio">https://simonwillison.net/2024/Oct/18/openai-audio</a></p>
-<p>Improve performance and UX for client-side AI: <a href="https://web.dev/articles/client-side-ai-performance">https://web.dev/articles/client-side-ai-performance</a></p>
+<p>For LLMs to better code with Jina API: <a href="https://github.com/jina-ai/meta-prompt">https://github.com/jina-ai/meta-prompt</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
