--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -160,6 +160,11 @@ git branch recovered-branch
 # You may want to push that back to remote
 git push origin recovered-branch:recovered-branch
 </code></pre>
+<h2>searching for commits by code</h2>
+<p>The <code>-S</code> option for <code>git log</code> lets us pass a string used to filter out commits whose diff doesn't include that specific string. More specifically, it is used to match code that was added or deleted in that commit. If no match is found, the commit is not included in the output.</p>
+<pre><code class="lang-sh"># Show commits that include "getUser" in the diff
+git log -S "getUser"
+</code></pre>
 <h2>rename branch</h2>
 <ul>
 <li>Rename the branch while working in this branch: <code>git branch -m &lt;new name&gt;</code>; rename from outside the branch: <code>git branch -m &lt;old name&gt; &lt;new name&gt;</code>.</li>
