--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -265,6 +265,24 @@ var removed = myFish.splice(3, 1);
 var myFish = ['angel', 'clown', 'trumpet', 'sturgeon'];
 var removed = myFish.splice(0, 2, 'parrot', 'anemone', 'blue');
 </code></pre>
+<p>Move an array item to a different position.</p>
+<pre><code class="lang-js">export function arrayMoveMutable(array, fromIndex, toIndex) {
+  const startIndex = fromIndex &lt; 0 ? array.length + fromIndex : fromIndex;
+
+  if (startIndex &gt;= 0 &amp;&amp; startIndex &lt; array.length) {
+    const endIndex = toIndex &lt; 0 ? array.length + toIndex : toIndex;
+
+    const [item] = array.splice(fromIndex, 1);
+    array.splice(endIndex, 0, item);
+  }
+}
+
+export function arrayMoveImmutable(array, fromIndex, toIndex) {
+  const newArray = [...array];
+  arrayMoveMutable(newArray, fromIndex, toIndex);
+  return newArray;
+}
+</code></pre>
 <h3>Flatten array</h3>
 <pre><code class="lang-js">const arr1 = [1, 2, [3, 4]];
 arr1.flat();  // [1, 2, 3, 4]
