--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -465,6 +465,12 @@ let a = 1, b = 3;
 [a, b] = [b, a];
 console.log(a); // 3
 console.log(b); // 1
+
+// Note: the semicolon here is required
+let b = 3
+[a, b] = [b, a]
+// will become:
+let b = 3[a, b] = [b, a];
 </code></pre>
 <h3>Object destructuring</h3>
 <pre><code class="lang-js">const o = {p: 42, q: true};
@@ -1274,6 +1280,8 @@ describe('suite name', () =&gt; {
   })
 })
 </code></pre>
+<blockquote><p>Before, we needed to write lots of defensive code to check if we passed weird things into methods. Now, we can use Typescript to make sure that never happens. We still need to test our business logic, but by using Typescript, we can write fewer unit tests.</p>
+</blockquote>
 <pre><code class="lang-js">import { expect, test } from 'vitest'
 import { render, screen } from '@testing-library/react'
 import { userEvent } from '@testing-library/user-event'
