--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -64,6 +64,7 @@ new Vue({
 <li><a href="https://blog.vuejs.org/posts/volar-1.0.html">Volar</a> 是 Vue 官方推荐的 VSCode 扩展，用以代替 Vue 2 时代的 Vetur 插件。<em>(Volar extension is deprecated. Use the Vue - Official extension instead.)</em></li>
 </ul>
 <p>The <a href="https://github.com/vuejs/language-tools">Vue Language Tools</a> are essential for providing language features such as autocompletion, type checking, and diagnostics when working with Vue’s SFCs. While <code>Volar</code> powers the language tools, the official extension for Vue is titled <code>Vue - Official</code> now on the VSCode marketplace.</p>
+<p>Vue DevTools is designed to enhance the Vue developer experience. There are multiple options to add this tool to your projects by <a href="https://devtools.vuejs.org/guide/vite-plugin">Vite plugin</a>, <a href="https://devtools.vuejs.org/guide/standalone">Standalone App</a>, or Chrome Extension. Note that The v7 version of devtools only supports Vue3. If your application is still using Vue2, please install the v6 version.</p>
 <h3>一些 webpack 的配置</h3>
 <ul>
 <li>Webpack 5 boilerplate: <a href="https://github.com/taniarascia/webpack-boilerplate">https://github.com/taniarascia/webpack-boilerplate</a></li>
