--- a/kexizeroing.github.io/Practical considerations for Input fields.html
+++ b/kexizeroing.github.io/Practical considerations for Input fields.html
@@ -5,8 +5,8 @@ title: "Practical considerations for Input fields"
 slug: practical-considerations-for-input-fields
 description: ""
 added: "Jun 5 2024"
-updatedDate: "Aug 17 2024"</p>
-<h2>tags: [web]</h2>
+tags: [web, react]</p>
+<h2>updatedDate: "Aug 17 2024"</h2>
 <h2>Dealing with contenteditable elements in Vue</h2>
 <pre><code class="lang-vue">&lt;template&gt;
   &lt;div contenteditable="true" v-html="modelValue" @input="update"&gt;&lt;/div&gt;
@@ -202,7 +202,7 @@ function App() {
 <pre><code class="lang-js">// React 19
 function RenderName({ name }) {
   // https://react.dev/reference/react-dom/hooks/useFormStatus
-  // The `useFormStatus` hook only returns status information for a parent &lt;form&gt;
+  // `useFormStatus` will only return status information for a parent &lt;form&gt;
   const { pending } = useFormStatus();
   return &lt;div&gt;{pending ? "Loading" : `Hello in React 19 ${name}` }&lt;/div&gt;;
 }
