--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -221,7 +221,7 @@ h1 {
 <h3>More to read</h3>
 <ul>
 <li>Web Performance 101: <a href="https://3perf.com/talks/web-perf-101/">https://3perf.com/talks/web-perf-101/</a></li>
-<li>A collection of the best practices that the Chrome DevRel team believes are the most effective ways to improve Core Web Vitals performance in 2023: <a href="https://web.dev/top-cwv-2023">https://web.dev/top-cwv-2023</a></li>
+<li>A collection of the best practices that the Chrome DevRel team believes are the most effective ways to improve Core Web Vitals performance: <a href="https://web.dev/articles/top-cwv">https://web.dev/articles/top-cwv</a></li>
 <li>Web Performance Snippets: <a href="https://github.com/nucliweb/webperf-snippets">https://github.com/nucliweb/webperf-snippets</a></li>
 <li>Get All That Network Activity Under Control with Priority Hints: <a href="https://www.macarthur.me/posts/priority-hints">https://www.macarthur.me/posts/priority-hints</a></li>
 <li>Get your <code>&lt;head&gt;</code> in order: <a href="https://github.com/rviscomi/capo.js">https://github.com/rviscomi/capo.js</a></li>
