--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -298,58 +298,89 @@ app.compose();  // Logs: 1, 3, 5, 6, 4, 2
 app.compose = compose(app.middlewares);
 </code></pre>
 <ol>
-<li><p>Implement the render function to convert the virtual dom JSON to real DOM.
-```js
-function render(vnode) {
+<li><p>Implement the render function to convert the virtual dom JSON to real DOM.</p>
+<pre><code class="lang-js">function render(vnode) {
 const { tag, props, children } = vnode;
-const el = document.createElement(tag);</p>
-<p>if (props) {
+const el = document.createElement(tag);
+
+if (props) {
 for (const key in props) {
   const value = props[key];
-  if (key.startsWith("on")) {</p>
-<pre><code>el.addEventListener(key.slice(2).toLowerCase(), value);
-</code></pre>
-<p>} else {</p>
-<pre><code>el.setAttribute(key, value);
-</code></pre>
-<p>}
+  if (key.startsWith("on")) {
+    el.addEventListener(key.slice(2).toLowerCase(), value);
+  } else {
+    el.setAttribute(key, value);
+  }
 }
-}</p>
-<p>if (children) {
+}
+
+if (children) {
 if (typeof children === "string") {
   el.textContent = children;
 } else {
-  children.forEach((item) =&gt; {</p>
-<pre><code>el.appendChild(render(item));
-</code></pre>
-<p>});
+  children.forEach((item) =&gt; {
+    el.appendChild(render(item));
+  });
 }
-}</p>
-<p>return el;
-}</p>
+}
+
+return el;
+}
+</code></pre>
+</li>
+<li><p>Write a <code>diff</code> function compares an old Virtual DOM node with a new one and returns a "patch" object describing the necessary changes.</p>
 </li>
 </ol>
-<p>/**</p>
-<ul>
-<li>Parse a string of HTML or XML to a DOM tree.</li>
-<li>@param {string} [html] String containing HTML or XML to be parsed.</li>
-<li>@returns {DocumentFragment} Object containing Node structure of HTML/XML parsed.
-*/
-const parse = (html) =&gt; {
-const element = document.createElement('template');
-if (html !== undefined) {
- element.innerHTML = html;
-}
-return element.content;
-};</li>
-</ul>
-<p>parse('Some &lt;em&gt;awesome&lt;/em&gt; markup &lt;img src="explosion.gif"&gt;');
-// returns DocumentFragment(4) [ #text, em, #text, img ]</p>
-<pre><code>
-12. You need to send to the browser is HTML — not a JSON tree. Write a function that turns your JSX to an HTML string. That's what React's built-in `renderToString` does.
+<pre><code class="lang-js">function diff(oldVNode, newVNode) {
+  if (!oldVNode) {
+    return { type: 'CREATE', newVNode };
+  }
+  if (!newVNode) {
+    return { type: 'REMOVE' };
+  }
+  if (typeof oldVNode !== typeof newVNode || oldVNode.tag !== newVNode.tag) {
+    return { type: 'REPLACE', newVNode };
+  }
+  if (typeof newVNode === 'string') {
+    if (oldVNode !== newVNode) {
+      return { type: 'TEXT', newVNode };
+    } else {
+      return null;
+    }
+  }
 
-```js
-// written by Dan Abramov
+  const patch = {
+    type: 'UPDATE',
+    props: diffProps(oldVNode.props, newVNode.props),
+    children: diffChildren(oldVNode.children, newVNode.children),
+  };
+  return patch;
+}
+
+function diffProps(oldProps, newProps) {
+  const patches = [];
+
+  for (let key in newProps) {
+    if (newProps[key] !== oldProps[key]) {
+      patches.push({ key, value: newProps[key] });
+    }
+  }
+  for (let key in oldProps) {
+    if (!(key in newProps)) {
+      patches.push({ key, value: undefined });
+    }
+  }
+  return patches;
+}
+
+function diffChildren(oldChildren, newChildren) {
+  // diff(oldChildren[i], newChildren[i])
+}
+</code></pre>
+<ol>
+<li>You need to send to the browser is HTML — not a JSON tree. Write a function that turns your JSX to an HTML string. That's what React's built-in <code>renderToString</code> does.</li>
+</ol>
+<pre><code class="lang-js">// written by Dan Abramov
 // e.g. &lt;div&gt;hello&lt;span&gt;world&lt;/div&gt;
 // {
 //   $$typeof: Symbol("react.element"),
