--- a/kexizeroing.github.io/JavaScript Observer APIs.html
+++ b/kexizeroing.github.io/JavaScript Observer APIs.html
@@ -6,7 +6,7 @@ slug: js-observer-apis
 description: ""
 added: "May 9 2024"
 tags: [js]</p>
-<h2>updatedDate: "Aug 17 2024"</h2>
+<h2>updatedDate: "Nov 2 2024"</h2>
 <p>Observers can be helpful to watch certain activities happening in the browser and respond accordingly. For example, we can observe, if child element has been added or removed from the parent DOM element, if a video is displayed within the viewport and enable autoplay, if the size/dimensions of a box element has changed and so on. These are different types of observer APIs in JavaScript.</p>
 <h2>Mutation Observer API</h2>
 <p>The <code>MutationObserver</code> interface provides the ability to watch for changes being made to the DOM tree.</p>
@@ -47,9 +47,11 @@ export default function AutomaticScroller({ children, className }) {
   const ref = useRef(null);
 
   useEffect(() =&gt; {
-    const mutationObserver = new MutationObserver(async () =&gt; {
+    const mutationObserver = new MutationObserver(() =&gt; {
       if (ref.current) {
         ref.current.scroll({ behavior: 'smooth', top: ref.current.scrollHeight });
+        // OR using `scrollTop` property
+        // ref.current.scrollTop = ref.current.scrollHeight - ref.current.clientHeight;
       }
     });
 
@@ -57,12 +59,12 @@ export default function AutomaticScroller({ children, className }) {
       mutationObserver.observe(ref.current, {
         childList: true,
       });
-
-      return () =&gt; {
-        mutationObserver.disconnect();
-      };
     }
-  }, [ref]);
+
+    return () =&gt; {
+      mutationObserver.disconnect();
+    };
+  }, []);
 
   return (
     &lt;div ref={ref} className={className}&gt;
@@ -152,3 +154,20 @@ observer.observe(el);
 
 ro.observe(document.getElementById("test"))
 </code></pre>
+<pre><code class="lang-js">// https://github.com/stackblitz/use-stick-to-bottom
+function Component() {
+  const { scrollRef, contentRef } = useStickToBottom();
+
+  return (
+    &lt;div style={{ overflow: 'auto' }} ref={scrollRef}&gt;
+      &lt;div ref={contentRef}&gt;
+        {messages.map((message) =&gt; (
+          &lt;Message key={message.id} message={message} /&gt;
+        ))}
+      &lt;/div&gt;
+    &lt;/div&gt;
+  );
+}
+</code></pre>
+<blockquote><p>The <code>wheel</code> event fires when the user rotates a wheel button on a pointing device (typically a mouse), which may help to distinguish between human and programmatic scrolling. Unfortunately the <code>wheel</code> event only fires for trackpads/scroll wheels. If you scroll up with the scrollbar located on the right of the window, or if you press arrow down, there's actually no way to distinguish this.</p>
+</blockquote>
