--- a/babyno.top/「译」iMessage采用PQ3量子密码技术实现消息传递.html
+++ b/babyno.top/「译」iMessage采用PQ3量子密码技术实现消息传递.html
@@ -62,7 +62,7 @@ categories:</li>
 <p>为了合并这两个对称密钥，我们首先通过调用HKDF-SHA384-Extract两次（每个密钥一次）来提取其熵。得到的48字节秘密进一步与领域分离字符串和会话信息（包括用户的标识符、用于密钥交换的公开密钥和封装的秘密）结合，再次调用HKDF-SHA384-Extract派生会话的初始密钥状态。这个组合确保了如果不知道两个共享秘密，就无法推导出初始会话状态。这意味着攻击者需要破解两种算法才能恢复结果秘密，从而满足我们的混合安全需求。</p>
 <h2>后量子密钥更新</h2>
 <p>持续的加密会话的密钥更新设计旨在即使强大的假想攻击者能够在某个特定时间点提取设备的加密状态，也无法重新计算用于加密过去和未来消息的密钥。该协议为每一条消息生成一个新的唯一密钥，这个密钥周期性地包含来自当前对话状态的新的熵，从而有效地为协议提供自愈能力。我们的密钥更新方法是基于采用了从其他密钥中衍生出新的会话密钥并确保加密状态只能向一个方向前进的技术即滑动窗口技术。PQ3合并了三个滑动窗口以实现后量子加密。</p>
-<p>第一个滑动窗口，称为对称滑动窗口，通过保护对话中的旧消息来实现前向保密性。对于每一条消息，我们都会从当前会话密钥派生一个用于每条消息的加密密钥。之后，当前的会话密钥进一步衍生出一个新的会话密钥，推动状态向前滑动。每个消息密钥在相应消息解密后立即被删除，这可以防止对手在以后某个时间攻破设备时解密先前收集到的密文，并防止重放消息攻击。这个过程使用256位的密钥和中间值，以及HKDF-SHA384作为一个衍生函数，这为对抗经典和量子计算机提供了保护。</p>
+<p>第一个滑动窗口，称为对称滑动窗口，通过保护对话中的旧消息来实现前向安全性。对于每一条消息，我们都会从当前会话密钥派生一个用于每条消息的加密密钥。之后，当前的会话密钥进一步衍生出一个新的会话密钥，推动状态向前滑动。每个消息密钥在相应消息解密后立即被删除，这可以防止对手在以后某个时间攻破设备时解密先前收集到的密文，并防止重放消息攻击。这个过程使用256位的密钥和中间值，以及HKDF-SHA384作为一个衍生函数，这为对抗经典和量子计算机提供了保护。</p>
 <p>第二个滑动窗口，称为ECDH滑动窗口，通过使用来自椭圆曲线密钥协议的新熵更新会话，保护未来的消息，即使对手攻破了过去的会话密钥，他们也无法解密新消息（称为后妥协安全性）。基于ECDH的滑动窗口有一个对称的流程：使用发送者的外发滑动窗口公钥的私钥和从接收者那里收到的最后一个公钥来在发送者和接收者之间建立一个新的共享秘密，然后将这个秘密混入会话的密钥材料中。iMessage的新PQ3协议使用NIST P-256椭圆曲线密钥执行这个滑动窗口，这只会对每个消息增加32字节的开销。</p>
 <p>因为第二个滑动窗口使用经典密码学，所以PQ3也加入了一个有条件执行的基于Kyber KEM的滑动窗口。这第三个滑动窗口补充了基于ECDH的滑动窗口，也提供了抵抗“现在收集，以后解密”量子攻击的后妥协安全。</p>
 <p>使用后量子滑动窗口与同一安全级别的基于ECDH的滑动窗口相比，会造成显著的网络开销。后量子KEM需要发送公钥和封装的密钥，而不仅仅是发送一个外出公钥。此外，对于公钥和封装密钥的参数，量子安全的基础数学结构需要相比椭圆曲线显著更大的参数大小。</p>
