--- a/f2h2h1.github.io/ACME的使用经验.html
+++ b/f2h2h1.github.io/ACME的使用经验.html
@@ -81,6 +81,9 @@ cd acme.sh
 多数情况下，续签证书的命令会加到定时任务里。</p>
 <p>一般的命令</p>
 <pre><code>~/.acme.sh/acme.sh --cron --home "/root/.acme.sh" &gt; /dev/null
+# windows 环境下要写成这样
+~/.acme.sh/acme.sh --cron --home "/c/Users/Administrator/.acme.sh" &gt; /dev/nul
+# --home 是 acme.sh 的安装路径，要写成绝对路径
 </code></pre>
 <p>写成 cron 表达式</p>
 <pre><code>0 2 * * * /bin/bash /root/.acme.sh/acme.sh --cron --home "/root/.acme.sh" &gt; /dev/null
@@ -90,9 +93,13 @@ cd acme.sh
 <p>查看全部证书</p>
 <pre><code>acme.sh --list
 </code></pre>
-<p>产看全部证书，包括已过的</p>
-<pre><code>acme.sh --list-archive
-</code></pre>
+&lt;!--
+产看全部证书，包括已过时的
+```
+acme.sh --list-archive
+```
+--&gt;
+
 <p>查看已安装证书的信息</p>
 <pre><code>acme.sh --info -d www.example.com
 </code></pre>
