--- a/index.html
+++ b/index.html
@@ -6,12 +6,30 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8942 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8950 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E5%8D%81%E6%9C%88%E8%AF%BB%E5%81%A5%E5%BA%B7%EF%BC%8C%E8%82%B2%E5%84%BF%EF%BC%8C%E9%BB%84%E6%98%93%E2%80%A6%E2%80%A67%E6%9C%AC.html>2024-11-08 2024 十月读健康，育儿，黄易……7本</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202444%20%E9%80%89%E6%8B%A9%E5%90%83%E8%8B%A6.html>2024-11-08 父范学堂 2444 选择吃苦</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202444%2011%E6%9C%88%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E5%91%A8%E6%9C%AB%EF%BC%8C%E5%A5%BD%E5%A4%9A%E9%A9%AC%E6%8B%89%E6%9D%BE%E6%AF%94%E8%B5%9B.html>2024-11-08 折返点 2444 11月的第一个周末，好多马拉松比赛</a></li>
+
+<li><a href=f2h2h1.github.io/%E7%94%B5%E5%AD%90%E9%82%AE%E4%BB%B6%E7%9A%84%E4%B8%8D%E5%AE%8C%E6%95%B4%E6%80%BB%E7%BB%93.html>2024-11-07 电子邮件的不完整总结</a></li>
+
+<li><a href=babyno.top/%E6%96%87%E9%A2%9C%E6%94%AF%E6%8C%81%E5%AF%BC%E5%87%BA%E9%95%BF%E5%9B%BE.html>2024-11-07 文颜支持导出长图</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%88%91%E6%B2%A1%E6%9C%89%E6%8A%95%E7%A5%A8%E7%BB%99%E5%B7%9D%E6%99%AE.html>2024-11-06 我没有投票给川普</a></li>
+
+<li><a href=babyno.top/%E6%96%87%E9%A2%9C%E6%94%AF%E6%8C%81%E8%87%AA%E5%AE%9A%E4%B9%89%E4%B8%BB%E9%A2%98.html>2024-11-06 文颜支持自定义主题</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E8%AF%BB%E5%AE%8C%E6%98%93%E7%BB%8F%20%E6%88%91%E7%BB%99%E5%B7%9D%E6%99%AE%E7%AE%97%E4%BA%86%E4%B8%80%E5%8D%A6.html>2024-11-05 读完易经 我给川普算了一卦</a></li>
+
+<li><a href=www.zhaohuabing.com/Envoy%20Gateway%20v%201.2.0%20%E7%89%88%E6%9C%AC%E5%8F%91%E5%B8%83%EF%BC%9A%E6%96%B0%E5%8A%9F%E8%83%BD%E4%B8%8E%E6%94%B9%E8%BF%9B%E4%BB%8B%E7%BB%8D.html>2024-11-05 Envoy Gateway v 1.2.0 版本发布：新功能与改进介绍</a></li>
 
 <li><a href=www.cnfeat.com/%E4%BB%80%E4%B9%88%E6%98%AF%E5%8D%A1%E7%89%87%E5%88%9B%E4%BD%9C%EF%BC%9F.html>2024-11-04 什么是卡片创作？</a></li>
 
@@ -100,8 +118,6 @@
 <li><a href=conge.livingwithfcs.org/2024%20%E5%85%AB%E6%9C%88%E8%AF%BB%E6%94%BF%E6%B2%BB%EF%BC%8C%E8%A7%89%E9%86%92%EF%BC%8C%E5%8D%AB%E9%9D%92%EF%BC%8C%E8%8D%89%E6%B0%91%E2%80%A6%E2%80%A6%2006%20%E6%9C%AC.html>2024-09-19 2024 八月读政治，觉醒，卫青，草民…… 06 本</a></li>
 
 <li><a href=informal.top/Validated%20example%20of%20LLM%20acceleration.html>2024-09-19 Validated example of LLM acceleration</a></li>
-
-<li><a href=babyno.top/%E3%80%8C%E6%96%87%E9%A2%9C%E3%80%8DWindows%E7%89%88%E5%B7%B2%E5%8F%91%E5%B8%83.html>2024-09-18 「文颜」Windows版已发布</a></li>
 
 <li><a href=sund.site/%E7%A3%A8%E5%90%88.html>2024-09-16 磨合</a></li>
 
