--- a/kexizeroing.github.io/Explore running code in browser.html
+++ b/kexizeroing.github.io/Explore running code in browser.html
@@ -54,6 +54,8 @@ const editor = monaco.editor.create(document.getElementById('editor'), {
   theme: 'vs-dark'
 });
 </code></pre>
+<blockquote><p><a href="https://esm.sh">esm.sh</a> is a global fast CDN for modern web development. It allows you to import JavaScript ES modules on NPM, GitHub, and JSR with a simple URL. No installation/build steps needed. Transpiling <code>.vue</code> or <code>.svelte</code> on esm.sh would be huge, meaning that you can publish a component to npm and import it from CDN without any build tools.</p>
+</blockquote>
 <p>To prevent the main thread from being blocked during code compilation, which could cause the UI to feel sluggish, we can use a Web Worker:</p>
 <pre><code class="lang-js">// compiler.worker.js
 self.addEventListener('message', async ({ data }) =&gt; {
