--- a/kexizeroing.github.io/Learn from Advent of Vue 2022.html
+++ b/kexizeroing.github.io/Learn from Advent of Vue 2022.html
@@ -249,6 +249,16 @@ const fullName = computed({
 fullName.value = 'Michael Thiessen';
 console.log(lastName.value);      // 'Thiessen'
 </code></pre>
+<p>A common mistake using <code>computed</code> is non reactive value as a dependency. Often developers need some reactivity when working with browser API’s, but the APIs are not reactive. To get around this, we will use VueUse library that adds reactivity to web browser APIs.</p>
+<pre><code class="lang-js">const videoPlayer = ref&lt;HTMLVideoElement&gt;();
+// wrong, not reactive
+const playing = computed(() =&gt; !videoPlayer.value?.paused);
+
+// instead, use composable from VueUse that provides a reactive ref
+const { playing: videoPlaying} = useMediaControls(videoRef, {
+  src: "/example.mp4",
+});
+</code></pre>
 <h3>Slots in Vue</h3>
 <pre><code class="lang-vue">&lt;template&gt;
   &lt;div class="named-slot"&gt;
