--- a/kexizeroing.github.io/React Server Side Rendering and Server Components.html
+++ b/kexizeroing.github.io/React Server Side Rendering and Server Components.html
@@ -72,8 +72,8 @@ import App from './components/App';
 
 ReactDOM.hydrate(&lt;App /&gt;, document.getElementById('ssr-app'));
 </code></pre>
-<blockquote><p>It's extremely important that SSR React output (HTML) and CSR React output (HTML) are matching, otherwise React will not be able to render and attach event listeners properly.</p>
-<p>If you follow semantic HTML principles, most of your app should work even before React has hydrated. Links can be followed, forms can be submitted, accordions can be expanded and collapsed (using <code>&lt;details&gt;</code> and <code>&lt;summary&gt;</code>). For most projects, it's fine if it takes a few seconds for React to hydrate.</p>
+<p>It's extremely important that SSR React output (HTML) and CSR React output (HTML) are matching, otherwise React will not be able to render and attach event listeners properly. If you follow semantic HTML principles, most of your app should work even before React has hydrated. Links can be followed, forms can be submitted, accordions can be expanded and collapsed (using <code>&lt;details&gt;</code> and <code>&lt;summary&gt;</code>). For most projects, it's fine if it takes a few seconds for React to hydrate.</p>
+<blockquote><p>For Vue server-side rendering, check out <a href="https://vuejs.org/guide/scaling-up/ssr.html">https://vuejs.org/guide/scaling-up/ssr.html</a></p>
 </blockquote>
 <h3>React hydration error</h3>
 <p>While rendering your application, there was a difference between the React tree that was pre-rendered from the server and the React tree that was rendered during the first render in the browser (hydration).</p>
