--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -115,12 +115,21 @@ window.performance.getEntriesByType('resource')
 <li><a href="https://developer.chrome.com/docs/web-platform/prerender-pages">https://developer.chrome.com/docs/web-platform/prerender-pages</a></li>
 <li><a href="https://developer.chrome.com/docs/devtools/application/debugging-speculation-rules">https://developer.chrome.com/docs/devtools/application/debugging-speculation-rules</a></li>
 </ul>
-<p>A page can be prerendered in either of two ways, all of which aim to make navigations quicker:</p>
+<p>A page can be prerendered in one of four ways, all of which aim to make navigations quicker:</p>
 <ol>
 <li>When you type a URL into the Chrome omnibox, Chrome may automatically prerender the page for you, if it has high confidence you will visit that page. (View Chrome's predictions for URLs in the <code>chrome://predictors</code> page)</li>
+<li>When you use the bookmarks bar, Chrome may automatically prerender the page for you on holding the pointer over one of the bookmark buttons.</li>
+<li>When you type a search term into the Chrome address bar, Chrome may automatically prerender the search results page, when instructed to do so by the search engine.</li>
 <li>Sites can use the <em>Speculation Rules API</em>, to programmatically tell Chrome which pages to prerender. This replaces what <code>&lt;link rel="prerender"...&gt;</code> used to do and allows sites to proactively prerender a page based on speculation rules on the page.</li>
 </ol>
-<p>Developers can insert JSON instructions onto their pages to inform the browser about which URLs to prerender. Speculation rules can be added in either the <code>&lt;head&gt;</code> or the <code>&lt;body&gt;</code> of the main frame. The <code>moderate</code> option is a middle ground, and many sites could benefit from the following speculation rule that would prerender a link when holding the pointer over the link for 200 milliseconds or on the pointerdown event.</p>
+<blockquote><p>For a greater than 50% confidence level, Chrome proactively preconnects to the domain, but does not prerender the page. For a greater than 80% confidence level (shown in green), Chrome will prerender the URL.</p>
+</blockquote>
+<p>Developers can insert JSON instructions onto their pages to inform the browser about which URLs to prerender. Speculation rules can be added in either the <code>&lt;head&gt;</code> or the <code>&lt;body&gt;</code> of the main frame.</p>
+<ul>
+<li>The Speculation Rules API used to include a <code>source</code> key which was set to <strong>list</strong> for list URLs or <strong>document</strong> for document URLs but this can be implied from the presence of a <code>urls</code> or <code>where</code> key (which are mutually exclusive).</li>
+<li>The document rules (available from Chrome 121), which prerenders links found in the document based on <code>href</code> selectors or CSS selectors.</li>
+<li>An <code>eagerness</code> setting is used to indicate when the speculations should fire. The default eagerness for list rules is <code>immediate</code>. The default eagerness for document rules is <code>conservative</code>. The <code>moderate</code> option is a middle ground that would prerender a link when holding the pointer over the link for 200 milliseconds or on the pointerdown event.</li>
+</ul>
 <p>Speculation rules can also be used to just prefetch pages, without a full prerender. Unlike the older <code>&lt;link rel="prefetch"&gt;</code> resource hint which just prefetched to the HTTP disk cache, documents loaded via speculation rules are processed in the same way that navigations are (but then not rendered) and are held in memory so will be available quicker to the browser once needed. <em>Prefetch speculation rules only prefetch the document, not its subresources.</em></p>
 <pre><code class="lang-html">&lt;script type="speculationrules"&gt;
   {
