--- a/f2h2h1.github.io/SEO的经验.html
+++ b/f2h2h1.github.io/SEO的经验.html
@@ -4,9 +4,9 @@
 <p>SEO 的方法要跟随搜索引擎的规则不断调整。如果没有精力研究 SEO 的技巧，那么只需要记住内容是满足用户需求的，有价值的。这样不管规则怎么改动，站点都不会受到太大的影响。</p>
 <h2>SEO 的三个方面</h2>
 <ul>
-<li>技术</li>
 <li>内容</li>
 <li>声望（外链）</li>
+<li>技术</li>
 </ul>
 <h3>内容</h3>
 <ul>
@@ -131,9 +131,20 @@
 <li>或者使用单独的域名，例如 m.qq.com 这类的</li>
 </ul>
 </li>
-<li>RTL</li>
-<li>i18n l10n G11N</li>
+<li>RTL<ul>
+<li>Right-to-Left 从右到左</li>
+<li>指的是文本和元素的布局方向，主要用于支持从右到左书写的语言，如阿拉伯语和希伯来语</li>
+<li>支持 RTL 布局是 i18n 和 l10n 工作的重要部分</li>
+</ul>
+</li>
+<li>i18n l10n G11N<ul>
+<li>Internationalization 国际化</li>
+<li>Localization 本地化</li>
+<li>Globalization 全球化</li>
+</ul>
+</li>
 <li>a11y<ul>
+<li>Accessibility 可访问性</li>
 <li>网页的配色方案要保持良好的对比度</li>
 <li>表单的输入项 input 最好有对应的 label</li>
 <li>尽量使用表单验证而不是用 js 验证表单的数据</li>
@@ -220,18 +231,18 @@
 <h2>SPA 如何做 SEO</h2>
 <p>基本原则是页面被搜索引擎爬虫访问时，返回完整的页面内容。</p>
 <ul>
-<li>SSG<ul>
+<li>SSG (Static Site Generation , 静态站点生成)<ul>
 <li>提前生成静态页面，对于中小型网站或更新不频繁的网站这是一个很好的解决方案</li>
 <li>但如果页面里有动态的内容，例如 留言 评论 这类的，就不好处理了</li>
 </ul>
 </li>
-<li>预渲染<ul>
+<li>预渲染 (pre render)<ul>
 <li>类似于 SSG ，但一部分内容还是通过接口获取</li>
 <li>大多数情况下预渲染并不能很好地应对 SEO ，因为大多数情况下，预渲染只是预渲染了前端的框架部分和一些很少修改的页面，页面的主要内容还是会通过接口请求</li>
 <li>其实可以把 SSG 看作预渲染的一种</li>
 </ul>
 </li>
-<li><p>SSR</p>
+<li><p>SSR (Server Side Rendering , 服务端渲染)</p>
 <ul>
 <li>全站 SSR</li>
 <li>首屏 SSR ，其它页面依然保持 CSR</li>
@@ -288,6 +299,8 @@
 <li>抖音</li>
 <li>快手</li>
 <li>bilibili</li>
+<li>知乎</li>
+<li>豆瓣</li>
 </ul>
 </li>
 <li>国外<ul>
@@ -313,6 +326,24 @@
     https://microformats.org/
 
 AMP 是什么？
+
+通过写博客，在论坛发帖，在论坛回复 等形式发布软文？使得自己站点的链接出现在其它站点里？
+
+EDM
+Email Direct Marketing
+电子邮件 直接 营销
+电子邮件营销
+
+Internet marketing
+网络营销
+
+购买 流量/排名/广告 ？
+
+电话/短信/sns私信/广告联盟
+
+主动寻找目标用户
+提高产品的知名度
+
 --&gt;
 
 <h2>参考</h2>
